@@ -1,5 +1,6 @@
 0.31-dev
 -add key set_repeat method.
+-update surface blit with optional rect return.
 
 0.31    2021-11-07
 -revise sprite orderedupdates.
